logs/to_posgrest_v4.6/read_and_load_review/2023-03-20T16:51:43.761619+00:00/5.log
[2023-03-20 17:19:49,624] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.6.read_and_load_review manual__2023-03-20T16:51:43.761619+00:00 [queued]>
[2023-03-20 17:19:49,663] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.6.read_and_load_review manual__2023-03-20T16:51:43.761619+00:00 [queued]>
[2023-03-20 17:19:49,664] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 17:19:49,665] {taskinstance.py:1239} INFO - Starting attempt 5 of 6
[2023-03-20 17:19:49,666] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 17:19:49,702] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): read_and_load_review> on 2023-03-20 16:51:43.761619+00:00
[2023-03-20 17:19:49,708] {standard_task_runner.py:52} INFO - Started process 17173 to run task
[2023-03-20 17:19:49,715] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v4.6', 'read_and_load_review', 'manual__2023-03-20T16:51:43.761619+00:00', '--job-id', '140', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmpgxqv9o4c', '--error-file', '/tmp/tmp533rvlk4']
[2023-03-20 17:19:49,718] {standard_task_runner.py:77} INFO - Job 140: Subtask read_and_load_review
[2023-03-20 17:19:50,020] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v4.6.read_and_load_review manual__2023-03-20T16:51:43.761619+00:00 [running]> on host 0b4cdb459521
[2023-03-20 17:19:50,344] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v4.6
AIRFLOW_CTX_TASK_ID=read_and_load_review
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T16:51:43.761619+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T16:51:43.761619+00:00
[2023-03-20 17:19:50,424] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 17:19:50,514] {dbapi.py:225} INFO - Running statement: 
            CREATE TEMPORARY TABLE temp_review (
                review_id text not null PRIMARY KEY,
                user_id text,
                business_id text,
                stars int,
                useful int,
                funny int,
                cool int,
                text text,
                date_values date
            );

            COPY temp_review FROM '/opt/***/data/output-csv/checkin_restaurant1.csv' DELIMITER ',' CSV HEADER;
            INSERT INTO review (review_id, user_id, business_id, stars, useful, funny, cool, text, date_values)
            SELECT DISTINCT ON (review_id) review_id, user_id, business_id, stars, useful, funny, cool, text, date_values
            FROM temp_review
            WHERE review_id IS NOT NULL AND column_name != '';
            ON CONFLICT (review_id) DO NOTHING;
        , parameters: None
[2023-03-20 17:19:50,519] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 19:             ON CONFLICT (review_id) DO NOTHING;
                     ^

[2023-03-20 17:19:50,615] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v4.6, task_id=read_and_load_review, execution_date=20230320T165143, start_date=20230320T171949, end_date=20230320T171950
[2023-03-20 17:19:50,656] {standard_task_runner.py:92} ERROR - Failed to execute job 140 for task read_and_load_review
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 19:             ON CONFLICT (review_id) DO NOTHING;
                     ^

[2023-03-20 17:19:50,681] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 17:19:50,875] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
